--- a/index.html
+++ b/index.html
@@ -1050,7 +1050,7 @@
         // Navigation functionality
         document.querySelectorAll('.nav-link').forEach(link => {
             link.addEventListener('click', function(e) {
-                e.preventDefault();
+                // e.preventDefault(); // RIMOSSO per permettere lo scroll automatico
                 document.querySelectorAll('.nav-link').forEach(l => l.classList.remove('active'));
                 this.classList.add('active');
             });
