--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
                         <div class="project-title">
                             <a href="https://cyberseas.eu/" target="_blank" style="color: inherit; text-decoration: none;" id="proj1Title">CyberSEAS</a>
                         </div>
-                        <div class="project-period">2022 - Present</div>
+                        <div class="project-period">2022 - 2024</div>
                         <div class="project-funding" id="proj1Org">EU Horizon 2020</div>
                         <div class="project-desc" id="proj1Desc">Cyber Securing Energy Data Services focusing on protecting critical energy infrastructures from cyber attacks.</div>
                     </div>
@@ -798,19 +798,13 @@
                         <div class="project-funding" id="proj2Org">EU Next Generation</div>
                         <div class="project-desc" id="proj2Desc">National Center for Sustainable Mobility developing modern solutions for national scale mobility.</div>
                     </div>
+
                     
                     <div class="project-card">
-                        <div class="project-title" id="proj3Title">MIRABILE</div>
+                        <div class="project-title" id="proj5Title">DOSSIER</div>
                         <div class="project-period">2024 - Present</div>
-                        <div class="project-funding" id="proj3Org">Ministero delle Imprese</div>
-                        <div class="project-desc" id="proj3Desc">Advancing digital technologies through Digital Twin systems and Metaverse integration.</div>
-                    </div>
-                    
-                    <div class="project-card">
-                        <div class="project-title" id="proj4Title">AZIPER</div>
-                        <div class="project-period">2024 - Present</div>
-                        <div class="project-funding" id="proj4Org">Ministero delle Imprese</div>
-                        <div class="project-desc" id="proj4Desc">Developing reference architecture for hyper-connected companies using advanced Digital Twins.</div>
+                        <div class="project-funding" id="proj5Org">NextGeneration EU</div>
+                        <div class="project-desc" id="proj5Desc">aDvanced mOnitoring SyStem with Enhanced SecuRity</div>
                     </div>
                 </div>
             </div>
