--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
                         <div class="project-desc" id="proj2Desc">National Center for Sustainable Mobility developing modern solutions for national scale mobility.</div>
                     </div>
 
-                    
+
                     <div class="project-card">
                         <div class="project-title" id="proj5Title">DOSSIER</div>
                         <div class="project-period">2024 - Present</div>
@@ -880,7 +880,7 @@
                     <li class="publication-item">COPPOLINO, Luigi, et al. Exploiting digital twin technology for cybersecurity monitoring in smart grids. In: Proceedings of the 18th International Conference on Availability, Reliability and Security. 2023. p. 1-10.</li>
                     <li class="publication-item">COPPOLINO, Luigi, et al. Building Cyber-Resilient Smart Grids with Digital Twins and Data Spaces. Applied Sciences, 2023, 13.24: 13060.</li>
                     <li class="publication-item">GIEŁCZYK, Agata, et al. The ATENA project: an international contribution to AI in Poland.</li>
-                    <li class="publication-item">FUJITA, H.; GUIZZI, G. Securing FIWARE with TEE Technology. In: New Trends in Intelligent Software Methodologies, Tools and Techniques: Proceedings of the 22nd International Conference on New Trends in Intelligent Software Methodologies, Tools and Techniques (SoMeT23). IOS Press, 2023. p. 149.</li>
+                    <li class="publication-item">COPPOLINO, Luigi, et al. Securing FIWARE with TEE Technology. In: New Trends in Intelligent Software Methodologies, Tools and Techniques: Proceedings of the 22nd International Conference on New Trends in Intelligent Software Methodologies, Tools and Techniques (SoMeT23). IOS Press, 2023. p. 149.</li>
                     <li class="publication-item">DE CRECCHIO, Alessandro; et al. Mobile Phones in the Cloud-Edge Continuum: Understanding the TEE’s Role. In: International Conference on Advanced Information Networking and Applications. Cham: Springer Nature Switzerland, 2024. p. 234-243.</li>
                     <li class="publication-item">COPPOLINO, Luigi et al. Connecting the Mobility and the Refuelling/Recharging Infrastructures: The Role of Data Spaces. Accepted at Zero-carbon refuelling/recharging infrastructures and grids PNRR MOST Spoke 7 - Connected networks and Smart Infrastructure</li>
                     <li class="publication-item">COPPOLINO, Luigi et al. Enabling Privacy Preserving Data Exchange in the Energy Supply Chain. Accepted at ITASEC2024</li>
